--- a/DSI_preassesment_code.ipynb
+++ b/DSI_preassesment_code.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "DSI preassesment code.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyO/6l4+ORIWF3gBQ081cPkg",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/antsaaims/DSI/blob/main/DSI_preassesment_code.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
