--- a/DSI_preassesment_code.ipynb
+++ b/DSI_preassesment_code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DSI preassesment code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDaJgkG48M70U10YzsFGMp",
+      "authorship_tag": "ABX9TyNs3MfCv7jlmhoU2xkcCQQR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1143,7 +1143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pwd "
+        ""
       ],
       "metadata": {
         "colab": {
@@ -1385,14 +1385,321 @@
     {
       "cell_type": "code",
       "source": [
-        "akas = pd.read_csv()\n",
-        "ratings = pd.read_csv()"
+        "akas = pd.read_csv('/content/gdrive/My Drive/DSI_Pre_Assignment_2022/title.akas.tsv.gz', compression='gzip',  sep='\\t')\n",
+        "akas.head(10)"
       ],
       "metadata": {
-        "id": "s6_JCrcqbEWT"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 418
+        },
+        "id": "e_7uVnc6v8Am",
+        "outputId": "58fd9e5b-a273-4880-c566-528b672ea4e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (7) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  interactivity=interactivity, compiler=compiler, result=result)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>titleId</th>\n",
+              "      <th>ordering</th>\n",
+              "      <th>title</th>\n",
+              "      <th>region</th>\n",
+              "      <th>language</th>\n",
+              "      <th>types</th>\n",
+              "      <th>attributes</th>\n",
+              "      <th>isOriginalTitle</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Carmencita - spanyol tánc</td>\n",
+              "      <td>HU</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>imdbDisplay</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Карменсита</td>\n",
+              "      <td>RU</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Carmencita</td>\n",
+              "      <td>US</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Carmencita</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>original</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Le clown et ses chiens</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>original</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>2</td>\n",
+              "      <td>A bohóc és kutyái</td>\n",
+              "      <td>HU</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>imdbDisplay</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Le clown et ses chiens</td>\n",
+              "      <td>FR</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Clovnul si cainii sai</td>\n",
+              "      <td>RO</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>imdbDisplay</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>5</td>\n",
+              "      <td>The Clown and His Dogs</td>\n",
+              "      <td>US</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>literal English title</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Клоун и его собаки</td>\n",
+              "      <td>RU</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     titleId  ordering  ...             attributes isOriginalTitle\n",
+              "0  tt0000001         1  ...                     \\N               0\n",
+              "1  tt0000001         2  ...                     \\N               0\n",
+              "2  tt0000001         3  ...                     \\N               0\n",
+              "3  tt0000001         4  ...                     \\N               1\n",
+              "4  tt0000002         1  ...                     \\N               1\n",
+              "5  tt0000002         2  ...                     \\N               0\n",
+              "6  tt0000002         3  ...                     \\N               0\n",
+              "7  tt0000002         4  ...                     \\N               0\n",
+              "8  tt0000002         5  ...  literal English title               0\n",
+              "9  tt0000002         6  ...                     \\N               0\n",
+              "\n",
+              "[10 rows x 8 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ratings = pd.read_csv('/content/gdrive/My Drive/DSI_Pre_Assignment_2022/title.ratings.tsv.gz', compression='gzip',  sep='\\t')\n",
+        "ratings.head(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "2TWJRNs_wD-r",
+        "outputId": "18d67ff2-e50b-4e64-cafb-e629f3309fa7"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tconst</th>\n",
+              "      <th>averageRating</th>\n",
+              "      <th>numVotes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>5.8</td>\n",
+              "      <td>1422</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>6.4</td>\n",
+              "      <td>168</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>tt0000003</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>1015</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>tt0000004</td>\n",
+              "      <td>6.4</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>tt0000005</td>\n",
+              "      <td>6.2</td>\n",
+              "      <td>1713</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>tt0000006</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>tt0000007</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>573</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>tt0000008</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>1526</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>tt0000009</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>tt0000010</td>\n",
+              "      <td>6.9</td>\n",
+              "      <td>5083</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      tconst  averageRating  numVotes\n",
+              "0  tt0000001            5.8      1422\n",
+              "1  tt0000002            6.4       168\n",
+              "2  tt0000003            6.6      1015\n",
+              "3  tt0000004            6.4       100\n",
+              "4  tt0000005            6.2      1713\n",
+              "5  tt0000006            5.5        88\n",
+              "6  tt0000007            5.5       573\n",
+              "7  tt0000008            5.6      1526\n",
+              "8  tt0000009            5.5        70\n",
+              "9  tt0000010            6.9      5083"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
