--- a/DSI_preassesment_code.ipynb
+++ b/DSI_preassesment_code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DSI preassesment code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbgzdfgejiI9EqiFRS8vGk",
+      "authorship_tag": "ABX9TyNtmN8jk4+oXiRb+hFhaMRo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1036,7 +1036,7 @@
       "metadata": {
         "id": "X3aULTB7Y9LM"
       },
-      "execution_count": 1,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1061,15 +1061,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ecd6c148-52c2-42b9-d684-8ba759bc99ec"
+        "outputId": "b3c3be4e-8696-49a9-83e4-2bde02157bb9"
       },
-      "execution_count": 2,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -1093,9 +1093,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1e58c26-1aa7-4e3d-dc60-a2ec16b27109"
+        "outputId": "7fbb9c3b-412a-478a-9df3-71b186261780"
       },
-      "execution_count": 3,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,7 +1115,7 @@
       "metadata": {
         "id": "ySnyG76WZBVH"
       },
-      "execution_count": 4,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1128,9 +1128,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d24744b9-53c2-459e-c024-c46b7ce14776"
+        "outputId": "c7240aa6-981f-4d25-f47c-d911ec95f8c9"
       },
-      "execution_count": 5,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,29 +1147,10 @@
         ""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "XC5em1p0ughv",
-        "outputId": "9fa59262-96cd-4730-cbac-7e8c4e6a715f"
+        "id": "XC5em1p0ughv"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'/content'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 46
-        }
-      ]
+      "execution_count": 59,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1192,9 +1173,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 626
         },
-        "outputId": "a39a9bfe-2f6d-483b-fcc2-1d70fd1d6f30"
+        "outputId": "fb43e39e-06f8-415e-e771-3506ef632685"
       },
-      "execution_count": 6,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -1379,7 +1360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 60
         }
       ]
     },
@@ -1395,9 +1376,9 @@
           "height": 418
         },
         "id": "e_7uVnc6v8Am",
-        "outputId": "2aae1d5c-8a66-47cc-8e49-7fcd1e77ad94"
+        "outputId": "b634d315-a4a6-4350-cc41-21d3d7a20a8f"
       },
-      "execution_count": 7,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1571,7 +1552,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 61
         }
       ]
     },
@@ -1587,9 +1568,9 @@
           "height": 363
         },
         "id": "2TWJRNs_wD-r",
-        "outputId": "21d83fba-172c-4d81-a4cd-b86ce9373806"
+        "outputId": "dc96a100-6a58-444c-fa42-c922f2300640"
       },
-      "execution_count": 8,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1679,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 62
         }
       ]
     },
@@ -1732,9 +1713,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ib5TJNtk0P4O",
-        "outputId": "0f96bd7b-d17b-4427-dcbc-8cfde589baa7"
+        "outputId": "3fddabda-7229-4bf1-d4a4-9cbfc79c5fc6"
       },
-      "execution_count": 9,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -1758,7 +1739,7 @@
       "metadata": {
         "id": "ZVL0cQgOfV8Y"
       },
-      "execution_count": 10,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1783,9 +1764,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ykeXUtlX0w-e",
-        "outputId": "a44f49c5-a151-492b-f1ba-fbef9cba18d5"
+        "outputId": "4337cdb0-843e-4c40-c5b3-75fb9a059021"
       },
-      "execution_count": 20,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,9 +1804,9 @@
           "height": 363
         },
         "id": "W3vHoSqq4_oV",
-        "outputId": "393639ed-a940-4c98-cf3b-c27876b3099f"
+        "outputId": "d4736871-4b97-4c19-bcb7-351faa4af325"
       },
-      "execution_count": 12,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1991,7 +1972,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 66
         }
       ]
     },
@@ -2011,7 +1992,7 @@
       "metadata": {
         "id": "AuLZ1FNwfaPm"
       },
-      "execution_count": 14,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -2024,9 +2005,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z32J427NB_H4",
-        "outputId": "0fa4bec1-a374-4442-b95f-d4d2f3e1421f"
+        "outputId": "51259003-7e82-44a5-8079-bfccd03aec6b"
       },
-      "execution_count": 15,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2036,7 +2017,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 68
         }
       ]
     },
@@ -2054,7 +2035,7 @@
       "metadata": {
         "id": "a1ZgveXuCJFZ"
       },
-      "execution_count": 16,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -2069,7 +2050,7 @@
         "id": "K-aWGnpNCLez",
         "outputId": "61addf60-22c5-4ecd-bbeb-61db2ff97a95"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2116,7 +2097,7 @@
       "metadata": {
         "id": "d5MqnrUS1XDX"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2131,7 +2112,7 @@
         "id": "EX1kRiZ7Wop9",
         "outputId": "e9987862-9140-4d88-b5f5-68bc80e4f5a0"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2148,7 +2129,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Outer means taking the union."
+        "Outer means taking the union.\n",
+        "\n",
+        "I do not know how to merge the three once so that is why I merged two dataframes twice."
       ],
       "metadata": {
         "id": "eJvl8kxDWvAn"
@@ -2166,7 +2149,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "titletypes = merged_outer['titleType']"
       ],
       "metadata": {
         "id": "S4C3sjAdWn1U"
@@ -2177,13 +2160,51 @@
     {
       "cell_type": "code",
       "source": [
+        "pd.Series(pd.Categorical(titletypes)).unique()\n"
+      ],
+      "metadata": {
+        "id": "lvGnVYkyfdiy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6447fa8e-6dee-43c0-e2d0-f51f4bbbc0f9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['short', 'movie', 'tvMovie', 'tvSeries', 'tvEpisode', ..., 'tvMiniSeries', 'tvSpecial', 'video', 'videoGame', NaN]\n",
+              "Length: 11\n",
+              "Categories (10, object): ['short', 'movie', 'tvMovie', 'tvSeries', ..., 'tvMiniSeries',\n",
+              "                          'tvSpecial', 'video', 'videoGame']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "lvGnVYkyfdiy"
+        "id": "8T4WTjWubWhh"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So there are 10 types of title."
+      ],
+      "metadata": {
+        "id": "lGi4sIK9bcY-"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2195,15 +2216,136 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "For the remaining part, I need to use the merged_inner data frame because we will need the ranking."
       ],
       "metadata": {
-        "id": "Md1ksNIIfhG6"
+        "id": "FO4phIHCdB1g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "region = merged_outer['region']\n",
+        "\n",
+        "pd.Series(pd.Categorical(region)).unique()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fyVludMSd_iF",
+        "outputId": "8d1839a8-1ff4-416e-a309-9416e11b3a61"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['HU', 'RU', 'US', '\\N', 'FR', ..., 'WF', 'MP', 'VG', 'KI', 'AI']\n",
+              "Length: 246\n",
+              "Categories (245, object): ['HU', 'RU', 'US', '\\N', ..., 'MP', 'VG', 'KI', 'AI']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "englishfilm=merged_inner.loc[(merged_inner['language'] == 'en') ]"
+      ],
+      "metadata": {
+        "id": "LfGrRngge726"
+      },
+      "execution_count": 70,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movie=merged_inner.loc[(merged_inner['titleType'] == 'movie') ]"
+      ],
+      "metadata": {
+        "id": "NR22PoADfptY"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "US=merged_inner.loc[(merged_inner['region'] == 'US') ]"
+      ],
+      "metadata": {
+        "id": "7fInkC6nfvFO"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "englishorus =  pd.merge(englishfilm,\n",
+        "    US,\n",
+        "    how=\"outer\", #outer because the condion is or\n",
+        "    on='tconst',\n",
+        "    sort=False,\n",
+        "    copy=False,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "viMSZwMgf_gu"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_new = pd.merge(englishorus,\n",
+        "    movie,\n",
+        "    how=\"inner\", #inner because the condion is AND\n",
+        "    on='tconst',\n",
+        "    sort=False,\n",
+        "    copy=False,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "hiTzh7KMgD0P"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(df_new)"
+      ],
+      "metadata": {
+        "id": "XvDd4pg4gH2n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "311f7bb5-f4b9-48e1-f8c8-b12fe33b2854"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1373352"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2213,6 +2355,17 @@
       "metadata": {
         "id": "mmZsVblQfhy3"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZfaRSeDZpFT9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
