--- a/DSI_preassesment_code.ipynb
+++ b/DSI_preassesment_code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DSI preassesment code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6oUeCukwP7KseVjCzrYJC",
+      "authorship_tag": "ABX9TyOLmoosm4ynqR3tMgjR7jWh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3590,11 +3590,52 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The result is different because in scipy, we used all the data and we computed the slopes and the intercept traditionnally.\n",
+        "\n",
+        "Instead, for pytorch and sklearn, we only use the train data and also, the coefficient are ajusted as long as the computation is going.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Dtu_dO8d2A2z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "9OTL4AkU3UYt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A model regression will be taking the average of the predicted value from the three models, as all three have pro and cons so using all of them will reduce errors."
+      ],
+      "metadata": {
+        "id": "P6tmxzTN3U22"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "9. You should commit at least three different versions of your notebook to your github account to demonstrate that you know the basics of using git for version control."
       ],
       "metadata": {
         "id": "qFsm_gKbgB8A"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "34-2ix323pM7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
