--- a/Twist_Challenge_Antsa.ipynb
+++ b/Twist_Challenge_Antsa.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Twist Challenge Antsa.ipynb",
       "provenance": [],
+      "authorship_tag": "ABX9TyO3TTsdqnG+lenUUVk2XzB8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/antsaaims/DSI/blob/main/Twist_Challenge_Antsa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AntsaHoneywinner/DSI/blob/main/Twist_Challenge_Antsa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
