--- a/Web_scrapping_from_Unsplash.ipynb
+++ b/Web_scrapping_from_Unsplash.ipynb
@@ -840,46 +840,85 @@
     {
       "cell_type": "code",
       "source": [
-        "cp  '/content/WebScrapping_Python/WebScrapping_Python/WebScrapping_Python/happy_vs_sad/dataset' -r /content/drive/MyDrive/"
+        "!cp  '/content/WebScrapping_Python/WebScrapping_Python/WebScrapping_Python/happy_vs_sad/dataset' -r /content/drive/MyDrive/Happy_vs_sad"
       ],
       "metadata": {
         "id": "5Re2kjqGyYpc"
       },
-      "execution_count": 206,
+      "execution_count": 208,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ls /content/drive/MyDrive/dataset"
+        "ls /content/drive/MyDrive/Happy_vs_sad/dataset"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N-sz5KlHyvO2",
-        "outputId": "cfadcbf9-8d0a-45d3-a95e-aca2e98fe34e"
+        "outputId": "e2ee925a-2118-4725-cb4d-63dfa59a1246"
       },
-      "execution_count": 207,
+      "execution_count": 209,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ls: cannot access '/content/drive/MyDrive/Happy_vs_sad/dataset': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Happy_vs_sad/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x9Aw9CZsyza-",
+        "outputId": "8aa6751f-2c55-42b3-be34-c57e2f06c1fa"
+      },
+      "execution_count": 212,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ls: cannot access '/content/drive/MyDriveHappy_vs_sad//': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls /content/drive/MyDrive/Happy_vs_sad/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LGAx9d-Q1dWb",
+        "outputId": "1b4b26d2-f6d5-4627-9c82-08c886dfc08d"
+      },
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "happy.0.jpg   happy.16.jpg  happy.4.jpg  sad.10.jpg  sad.17.jpg  sad.5.jpg\n",
-            "happy.0.png   happy.16.png  happy.4.png  sad.10.png  sad.17.png  sad.5.png\n",
             "happy.10.jpg  happy.17.jpg  happy.5.jpg  sad.11.jpg  sad.18.jpg  sad.6.jpg\n",
-            "happy.10.png  happy.17.png  happy.5.png  sad.11.png  sad.18.png  sad.6.png\n",
             "happy.11.jpg  happy.18.jpg  happy.6.jpg  sad.12.jpg  sad.19.jpg  sad.7.jpg\n",
-            "happy.11.png  happy.18.png  happy.6.png  sad.12.png  sad.19.png  sad.7.png\n",
             "happy.12.jpg  happy.19.jpg  happy.7.jpg  sad.13.jpg  sad.1.jpg   sad.8.jpg\n",
-            "happy.12.png  happy.19.png  happy.7.png  sad.13.png  sad.1.png   sad.8.png\n",
             "happy.13.jpg  happy.1.jpg   happy.8.jpg  sad.14.jpg  sad.2.jpg   sad.9.jpg\n",
-            "happy.13.png  happy.1.png   happy.8.png  sad.14.png  sad.2.png   sad.9.png\n",
             "happy.14.jpg  happy.2.jpg   happy.9.jpg  sad.15.jpg  sad.3.jpg\n",
-            "happy.14.png  happy.2.png   happy.9.png  sad.15.png  sad.3.png\n",
-            "happy.15.jpg  happy.3.jpg   sad.0.jpg    sad.16.jpg  sad.4.jpg\n",
-            "happy.15.png  happy.3.png   sad.0.png    sad.16.png  sad.4.png\n"
+            "happy.15.jpg  happy.3.jpg   sad.0.jpg    sad.16.jpg  sad.4.jpg\n"
           ]
         }
       ]
@@ -890,7 +929,7 @@
         ""
       ],
       "metadata": {
-        "id": "x9Aw9CZsyza-"
+        "id": "GyseE3OU1kus"
       },
       "execution_count": null,
       "outputs": []
